// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exceptions throws error for extract methods 1`] = `"style.extract is not a function"`;

exports[`Exceptions throws error for extract methods 2`] = `"style.extractTags is not a function"`;

exports[`Exceptions throws for unterminated comments 1`] = `"Your styles have an unterminated comment (\\"/*\\" without corresponding \\"*/\\")."`;

exports[`Usage adds dev labels: -flex 1`] = `"dash-1gsnvr5-flex"`;

exports[`Usage adds dev labels: -flex-block 1`] = `"dash-1auscot-flex-block"`;

exports[`Usage adds dev labels: -flex-inline 1`] = `"dash-17gir1n-flex-inline"`;

exports[`Usage adds styles by order of definition when called: flex, block, inline 1`] = `
<style
  data-dash="dash"
>
  
  .dash-1fwol6f{display:flex;display:block;display:inline;}
</style>
`;

exports[`Usage adds styles by order of definition when called: flex, block, inline 2`] = `
<style
  data-dash="dash"
>
  
  .dash-1fwol6f{display:flex;display:block;display:inline;}
</style>
`;

exports[`Usage allows comments 1`] = `"dash-1s6c5ui"`;

exports[`Usage allows multiple arguments 1`] = `
<style
  data-dash="dash"
>
  
  .dash-1t77otj{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;display:block;display:inline;}
</style>
`;

exports[`Usage allows style functions in arguments 1`] = `
<style
  data-dash="dash"
>
  
  .dash-1t77otj{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;display:block;display:inline;}
</style>
`;

exports[`Usage allows unitless object values: 200x200 1`] = `
<style
  data-dash="dash"
>
  
  .dash-haiabg{width:200px;height:200px;}
</style>
`;

exports[`Usage creates global variables w/ scales: :root 1`] = `
<style
  data-dash="dash"
>
  
  :root{--dash-spacing-0:1rem;--dash-spacing-1:2rem;--dash-spacing-2:4rem;}
</style>
`;

exports[`Usage creates global variables: :root 1`] = `
<style
  data-dash="dash"
>
  
  :root{--dash-colors-blue:#09a;--dash-colors-red:#c12;--dash-spacing-xs:1rem;}
</style>
`;

exports[`Usage creates theme variables: :root 1`] = `
<style
  data-dash="dash"
>
  
  .dash-dark-theme{--dash-colors-bg:#000;--dash-colors-text:#fff;}
</style>
`;

exports[`Usage injects global styles 1`] = `
<style
  data-dash="dash"
>
  
  html{font-size:100%;}
</style>
`;

exports[`Usage passes variables to global styles 1`] = `
Object {
  "colors": Object {
    "bg": "var(--dash-colors-bg)",
    "blue": "var(--dash-colors-blue)",
    "red": "var(--dash-colors-red)",
    "text": "var(--dash-colors-text)",
  },
}
`;

exports[`Usage passes variables to style callbacks 1`] = `
Object {
  "colors": Object {
    "bg": "var(--dash-colors-bg)",
    "blue": "var(--dash-colors-blue)",
    "red": "var(--dash-colors-red)",
    "text": "var(--dash-colors-text)",
  },
}
`;

exports[`Usage passes variables to style callbacks 2`] = `"dash-dark-theme"`;

exports[`Usage passes variables to style callbacks 3`] = `
Object {
  "colors": Object {
    "bg": "var(--dash-colors-bg)",
    "blue": "var(--dash-colors-blue)",
    "red": "var(--dash-colors-red)",
    "text": "var(--dash-colors-text)",
  },
}
`;

exports[`Usage passes variables to style callbacks 4`] = `"dash-light-theme"`;

exports[`Usage passes variables to style callbacks 5`] = `
Object {
  "colors": Object {
    "bg": "var(--dash-colors-bg)",
    "blue": "var(--dash-colors-blue)",
    "red": "var(--dash-colors-red)",
    "text": "var(--dash-colors-text)",
  },
}
`;

exports[`Usage returns single class name 1`] = `"dash-1ut9bc3"`;

exports[`Usage returns single class name 2`] = `"dash-1fwol6f"`;

exports[`Usage returns single class name 3`] = `"dash-yz87pd"`;

exports[`Usage should inject global styles once 1`] = `
<style
  data-dash="dash"
>
  
  :root{--spacing-0:0;}
</style>
`;

exports[`Usage should inject global styles once 2`] = `
<style
  data-dash="dash"
>
  
  html{font-size:100%;}
</style>
`;

exports[`Usage should inject global styles once 3`] = `
<style
  data-dash="dash"
>
  
  :root{--spacing-1:0.5rem;}
</style>
`;
